Integrate i18next and create translation strings

--- a/package.json
+++ b/package.json
@@ -68,6 +68,8 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-unused-imports": "^1.1.4",
     "framer-motion": "^4.1.17",
+    "i18next": "^21.8.10",
+    "i18next-resources-to-backend": "^1.0.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.16.0",
     "prettier": "^2.4.1",
@@ -76,6 +78,7 @@
     "react-confetti": "^6.0.1",
     "react-detect-click-outside": "^1.1.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.17.2",
     "react-is": "^17.0.2",
     "react-qr-code": "^2.0.3",
     "react-router-dom": "^6.3.0",
