--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "electron-updater": "^5.3.0"
   },
   "devDependencies": {
-    "@alephium/sdk": "0.3.0",
+    "@alephium/sdk": "file:../js-sdk/alephium-sdk-0.3.0.tgz",
     "@alephium/walletconnect-provider": "0.2.0",
     "@alephium/web3": "0.2.0",
     "@json-rpc-tools/utils": "^1.7.6",
