Show upgrade msg only when version is newer
Closes #273

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/react": "^17.0.24",
     "@types/react-color": "^3.0.6",
     "@types/react-dom": "^17.0.9",
+    "@types/semver-compare": "^1.0.1",
     "@types/styled-components": "^5.1.14",
     "@types/tinycolor2": "^1.4.3",
     "@types/yaireo__tagify": "^4.7.0",
@@ -80,6 +81,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "^4.0.3",
     "react-tooltip": "^4.2.21",
+    "semver-compare": "^1.0.0",
     "shx": "^0.3.3",
     "styled-components": "^5.3.1",
     "tinycolor2": "^1.4.2",
