--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     ]
   },
   "dependencies": {
+    "colord": "^2.9.3",
     "electron-context-menu": "^3.1.2",
     "electron-is-dev": "^2.0.0"
   },
@@ -47,7 +48,6 @@
     "@types/react-dom": "^17.0.9",
     "@types/semver-compare": "^1.0.1",
     "@types/styled-components": "^5.1.14",
-    "@types/tinycolor2": "^1.4.3",
     "@types/yaireo__tagify": "^4.15.1",
     "@types/zxcvbn": "^4.4.1",
     "@yaireo/tagify": "^4.12.0",
@@ -86,7 +86,6 @@
     "semver-compare": "^1.0.0",
     "shx": "^0.3.3",
     "styled-components": "^5.3.1",
-    "tinycolor2": "^1.4.2",
     "type-fest": "^2.8.0",
     "typescript": "^4.4.3",
     "wait-on": "6.0.0",
