--- a/package.json
+++ b/package.json
@@ -53,10 +53,10 @@
     "@yaireo/tagify": "^4.12.0",
     "bip39": "^3.0.4",
     "classnames": "^2.3.1",
-    "concurrently": "^6.2.1",
+    "concurrently": "^7.4.0",
     "cross-env": "^7.0.3",
     "dayjs": "^1.10.7",
-    "electron": "^20.0.3",
+    "electron": "^21.0.0",
     "electron-builder": "^23.0.3",
     "electron-devtools-installer": "^3.2.0",
     "eslint-config-prettier": "^8.3.0",
@@ -84,12 +84,10 @@
     "react-scrollbars-custom": "^4.1.1",
     "react-tooltip": "^4.2.21",
     "semver-compare": "^1.0.0",
-    "shx": "^0.3.3",
     "styled-components": "^5.3.1",
     "type-fest": "^2.8.0",
     "typescript": "^4.4.3",
-    "wait-on": "6.0.0",
-    "web-ext": "^6.5.0",
+    "wait-on": "^6.0.0",
     "zxcvbn": "^4.4.2"
   },
   "build": {
