--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@walletconnect/sign-client": "2.0.0-rc.3",
     "@walletconnect/types": "2.0.0-rc.3",
     "@walletconnect/utils": "2.0.0-rc.3",
-    "alephium-web3": "0.8.3",
+    "@alephium/web3": "0.2.0-rc.17",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.0",
     "@types/jest": "^27.0.2",
