--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "electron-is-dev": "^2.0.0"
   },
   "devDependencies": {
-    "@alephium/sdk": "file:../js-sdk/alephium-sdk-0.2.2.tgz",
+    "@alephium/sdk": "0.3.0",
     "@alephium/walletconnect-provider": "0.2.0",
     "@alephium/web3": "0.2.0",
     "@json-rpc-tools/utils": "^1.7.6",
