--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   ],
   "dependencies": {
     "electron-context-menu": "^3.1.2",
-    "electron-is-dev": "^2.0.0"
+    "electron-is-dev": "^2.0.0",
+    "electron-updater": "^5.3.0"
   },
   "devDependencies": {
     "@alephium/sdk": "0.2.2",
