--- a/package.json
+++ b/package.json
@@ -25,18 +25,16 @@
     "not op_mini all"
   ],
   "dependencies": {
-    "@alephium/sdk": "file:../js-sdk/alephium-sdk-0.3.0.tgz",
-    "@reduxjs/toolkit": "^1.9.0",
     "electron-context-menu": "^3.1.2",
     "electron-is-dev": "^2.0.0",
-    "electron-updater": "^5.3.0",
-    "react-redux": "^8.0.5",
-    "redux": "^4.2.0"
+    "electron-updater": "^5.3.0"
   },
   "devDependencies": {
+    "@alephium/sdk": "0.4.0-rc.0",
     "@alephium/walletconnect-provider": "0.2.0",
     "@alephium/web3": "0.2.0",
     "@json-rpc-tools/utils": "^1.7.6",
+    "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.0",
     "@types/jest": "^27.0.2",
@@ -84,10 +82,12 @@
     "react-i18next": "^11.17.2",
     "react-is": "^17.0.2",
     "react-qr-code": "^2.0.3",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^4.0.3",
     "react-scrollbars-custom": "^4.1.1",
     "react-tooltip": "^4.2.21",
+    "redux": "^4.2.0",
     "semver-compare": "^1.0.0",
     "styled-components": "^5.3.1",
     "type-fest": "^2.8.0",
