--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
   "author": "Alephium dev <dev@alephium.org>",
   "main": "public/electron.js",
   "scripts": {
-    "build": "cross-env REACT_APP_VERSION=$npm_package_version INLINE_RUNTIME_CHUNK=false REACT_APP_CSP=\"script-src 'self'\" react-scripts build",
-    "electron-dev": "concurrently \"BROWSER=none npm run start\" \"wait-on http://localhost:3000 && electron .\"",
+    "build": "cross-env VITE_VERSION=$npm_package_version INLINE_RUNTIME_CHUNK=false tsc && vite build",
+    "electron-dev": "concurrently \"BROWSER=none npm run start\" \"electron .\"",
     "electron-pack": "npm run build && electron-builder",
     "electron-pack-windows": "npm run build && electron-builder -w",
     "electron-pack-macos": "npm run build && electron-builder --mac --universal",
     "electron-pack-ubuntu": "npm run build && electron-builder -l",
     "electron-pack-linux:arm64": "npm run build && electron-builder -l --arm64",
-    "start": "cross-env REACT_APP_VERSION=$npm_package_version REACT_APP_CSP=\"script-src 'self' 'unsafe-inline'\" react-scripts start",
+    "start": "cross-env VITE_VERSION=$npm_package_version vite",
     "test": "react-scripts test",
     "lint": "eslint . --ext .ts,.tsx --max-warnings=0",
     "lint:fix": "eslint . --fix --ext .ts,.tsx",
@@ -25,12 +25,14 @@
     "not op_mini all"
   ],
   "dependencies": {
+    "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
+    "@esbuild-plugins/node-modules-polyfill": "^0.1.4",
     "electron-context-menu": "^3.1.2",
     "electron-is-dev": "^2.0.0",
     "electron-updater": "^5.3.0"
   },
   "devDependencies": {
-    "@alephium/sdk": "0.3.0",
+    "@alephium/sdk": "0.4.0-rc.1",
     "@alephium/walletconnect-provider": "0.2.0",
     "@alephium/web3": "0.2.0",
     "@json-rpc-tools/utils": "^1.7.6",
@@ -46,6 +48,7 @@
     "@types/styled-components": "^5.1.14",
     "@types/yaireo__tagify": "^4.15.1",
     "@types/zxcvbn": "^4.4.1",
+    "@vitejs/plugin-react": "^2.2.0",
     "@walletconnect/sign-client": "2.0.0-rc.3",
     "@walletconnect/types": "2.0.0-rc.3",
     "@walletconnect/utils": "2.0.0-rc.3",
@@ -68,6 +71,7 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-unused-imports": "^1.1.4",
     "framer-motion": "^4.1.17",
+    "happy-dom": "^7.7.2",
     "i18next": "^21.8.10",
     "i18next-resources-to-backend": "^1.0.0",
     "lodash": "^4.17.21",
@@ -82,13 +86,15 @@
     "react-is": "^17.0.2",
     "react-qr-code": "^2.0.3",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^4.0.3",
     "react-scrollbars-custom": "^4.1.1",
     "react-tooltip": "^4.2.21",
     "semver-compare": "^1.0.0",
     "styled-components": "^5.3.1",
     "type-fest": "^2.8.0",
     "typescript": "^4.4.3",
+    "vite": "^3.2.5",
+    "vite-plugin-svgr": "^2.2.2",
+    "vitest": "^0.25.5",
     "wait-on": "^6.0.0",
     "zxcvbn": "^4.4.2"
   },
