--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "electron-pack-ubuntu": "npm run build && electron-builder -l",
     "electron-pack-linux:arm64": "npm run build && electron-builder -l --arm64",
     "start": "cross-env VITE_VERSION=$npm_package_version vite",
-    "test": "react-scripts test",
+    "test": "vitest run",
+    "test:watch": "vitest watch",
+    "test:coverage": "vitest run --coverage",
     "lint": "eslint . --ext .ts,.tsx --max-warnings=0",
     "lint:fix": "eslint . --fix --ext .ts,.tsx",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\""
@@ -32,13 +34,12 @@
     "electron-updater": "^5.3.0"
   },
   "devDependencies": {
-    "@alephium/sdk": "0.4.0-rc.1",
+    "@alephium/sdk": "0.4.0-rc.2",
     "@alephium/walletconnect-provider": "0.2.0",
     "@alephium/web3": "0.2.0",
     "@json-rpc-tools/utils": "^1.7.6",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.0",
-    "@types/jest": "^27.0.2",
     "@types/lodash": "^4.14.173",
     "@types/node": "^16.9.6",
     "@types/react": "^17.0.24",
@@ -71,9 +72,9 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-unused-imports": "^1.1.4",
     "framer-motion": "^4.1.17",
-    "happy-dom": "^7.7.2",
     "i18next": "^21.8.10",
     "i18next-resources-to-backend": "^1.0.0",
+    "jsdom": "^20.0.3",
     "lodash": "^4.17.21",
     "lucide-react": "^0.90.0",
     "prettier": "^2.4.1",
