Install events to fix build erros

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@json-rpc-tools/utils": "^1.7.6",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.0",
+    "@types/events": "^3.0.0",
     "@types/lodash": "^4.14.173",
     "@types/node": "^16.9.6",
     "@types/react": "^17.0.24",
@@ -71,6 +72,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-unused-imports": "^1.1.4",
+    "events": "^3.3.0",
     "framer-motion": "^4.1.17",
     "i18next": "^21.8.10",
     "i18next-resources-to-backend": "^1.0.0",
