--- a/.github/workflows/sign_and_release.yml
+++ b/.github/workflows/sign_and_release.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Build/release Electron app
         uses: samuelmeuli/action-electron-builder@v1
-        if: ${{ startsWith(github.ref, 'refs/tags/v') }}
+#        if: ${{ startsWith(github.ref, 'refs/tags/v') }}
         with:
           # GitHub token, automatically provided to the action
           # (No need to define this secret in the repo settings)
