Remove one auth method

--- a/.github/workflows/sign_and_release.yml
+++ b/.github/workflows/sign_and_release.yml
@@ -47,7 +47,7 @@ jobs:
           # macOS notarization API key
           API_KEY_ID: ${{ secrets.api_key_id }}
           API_KEY_ISSUER_ID: ${{ secrets.api_key_issuer_id }}
-          APPLE_ID: ${{ secrets.apple_id }}
-          APPLE_ID_PASSWORD: ${{ secrets.apple_id_password }}
-          APPLEID: ${{ secrets.apple_id }}
-          APPLEIDPASS: ${{ secrets.apple_id_password }}
+#          APPLE_ID: ${{ secrets.apple_id }}
+#          APPLE_ID_PASSWORD: ${{ secrets.apple_id_password }}
+#          APPLEID: ${{ secrets.apple_id }}
+#          APPLEIDPASS: ${{ secrets.apple_id_password }}
