--- a/.github/workflows/sign_and_release.yml
+++ b/.github/workflows/sign_and_release.yml
@@ -1,6 +1,8 @@
 name: Sign and Release
 
-on: [push]
+on:
+  push:
+    tags: ['v[0-9]+.[0-9]+.[0-9]+*']
 
 jobs:
   test:
@@ -21,7 +23,6 @@ jobs:
 
       - name: Prepare for app notarization
         if: startsWith(matrix.os, 'macos')
-        # Import Apple API key for app notarization on macOS
         run: |
           mkdir -p ~/private_keys/
           echo '${{ secrets.api_key }}' > ~/private_keys/AuthKey_${{ secrets.api_key_id }}.p8
@@ -29,24 +30,15 @@ jobs:
 
       - name: Build/release Electron app
         uses: samuelmeuli/action-electron-builder@v1
-#        if: ${{ startsWith(github.ref, 'refs/tags/v') }}
+        if: ${{ startsWith(github.ref, 'refs/tags/v') }}
         with:
-          # GitHub token, automatically provided to the action
-          # (No need to define this secret in the repo settings)
           github_token: ${{ secrets.github_token }}
-
-          # If the commit is tagged with a version (e.g. "v1.0.0"),
-          # release the app after building
-          #release: ${{ startsWith(github.ref, 'refs/tags/v') }}
-          release: true
+          release: ${{ startsWith(github.ref, 'refs/tags/v') }}
           mac_certs: ${{ secrets.mac_certs }}
           mac_certs_password: ${{ secrets.mac_certs_password }}
 #          windows_certs: ${{ secrets.windows_certs }}
 #          windows_certs_password: ${{ secrets.windows_certs_password }}
         env:
-          # macOS notarization API key
-#          API_KEY_ID: ${{ secrets.api_key_id }}
-#          API_KEY_ISSUER_ID: ${{ secrets.api_key_issuer_id }}
           APPLE_ID: ${{ secrets.apple_id }}
           APPLE_ID_PASSWORD: ${{ secrets.apple_id_password }}
           APPLEID: ${{ secrets.apple_id }}
