--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "electron-updater": "^5.3.0"
   },
   "devDependencies": {
-    "@alephium/sdk": "0.4.0-rc.2",
+    "@alephium/sdk": "0.4.1",
     "@alephium/walletconnect-provider": "0.2.0",
     "@alephium/web3": "0.2.0",
     "@json-rpc-tools/utils": "^1.7.6",
