--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@types/styled-components": "^5.1.14",
     "@types/yaireo__tagify": "^4.15.1",
     "@types/zxcvbn": "^4.4.1",
+    "@typescript-eslint/eslint-plugin": "^5.46.1",
     "@vitejs/plugin-react": "^2.2.0",
     "@walletconnect/sign-client": "2.0.0-rc.3",
     "@walletconnect/types": "2.0.0-rc.3",
@@ -66,12 +67,14 @@
     "electron": "^21.0.0",
     "electron-builder": "^23.0.3",
     "electron-devtools-installer": "^3.2.0",
+    "eslint": "^8.29.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-header": "^3.1.1",
     "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
-    "eslint-plugin-unused-imports": "^1.1.4",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "events": "^3.3.0",
     "framer-motion": "^4.1.17",
     "i18next": "^21.8.10",
