Electron build is fine, but global is missing

--- a/package.json
+++ b/package.json
@@ -108,7 +108,8 @@
     "appId": "org.alephium.alephium-wallet",
     "files": [
       "build/**/*",
-      "public/electron.js"
+      "public/electron.js",
+      "public/preload.js"
     ],
     "linux": {
       "category": "Finance",
