--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "electron-pack-ubuntu": "npm run build && electron-builder -l",
     "electron-pack-linux:arm64": "npm run build && electron-builder -l --arm64",
     "start": "cross-env VITE_VERSION=$npm_package_version vite",
+    "preview": "vite preview",
     "test": "vitest run",
     "test:watch": "vitest watch",
     "test:coverage": "vitest run --coverage",
