--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "react-confetti": "^6.0.1",
     "react-detect-click-outside": "^1.1.2",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.42.1",
     "react-i18next": "^12.1.4",
     "react-is": "^18.2.0",
     "react-qr-code": "^2.0.3",
