--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "electron-updater": "^5.3.0"
   },
   "devDependencies": {
-    "@alephium/sdk": "0.5.0-rc.0",
+    "@alephium/sdk": "0.5.0",
     "@alephium/walletconnect-provider": "0.2.1",
     "@alephium/web3": "0.2.0",
     "@json-rpc-tools/utils": "^1.7.6",
