--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "main": "public/electron.js",
   "scripts": {
     "build": "tsc && cross-env INLINE_RUNTIME_CHUNK=false VITE_VERSION=$npm_package_version vite build",
-    "electron-dev": "concurrently \"BROWSER=none npm run start\" \"electron .\"",
+    "electron-dev": "concurrently \"cross-env BROWSER=none VITE_VERSION=$npm_package_version vite\" \"electron .\"",
     "electron-pack": "npm run build && electron-builder",
     "electron-pack-windows": "npm run build && electron-builder -w",
     "electron-pack-macos": "npm run build && electron-builder --mac --universal",
