Rename electron-dev to start:electron and reorder

--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
   "main": "public/electron.js",
   "scripts": {
     "build": "tsc && cross-env INLINE_RUNTIME_CHUNK=false VITE_VERSION=$npm_package_version vite build",
-    "electron-dev": "concurrently \"cross-env BROWSER=none VITE_VERSION=$npm_package_version vite\" \"electron .\"",
+    "start": "cross-env VITE_VERSION=$npm_package_version vite",
+    "start:electron": "concurrently \"cross-env BROWSER=none VITE_VERSION=$npm_package_version vite\" \"electron .\"",
     "electron-pack": "npm run build && electron-builder",
     "electron-pack-windows": "npm run build && electron-builder -w",
     "electron-pack-macos": "npm run build && electron-builder --mac --universal",
     "electron-pack-ubuntu": "npm run build && electron-builder -l",
     "electron-pack-linux:arm64": "npm run build && electron-builder -l --arm64",
-    "start": "cross-env VITE_VERSION=$npm_package_version vite",
     "preview": "vite preview",
     "test": "vitest run",
     "test:watch": "vitest watch",
