--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "tsc && cross-env INLINE_RUNTIME_CHUNK=false VITE_VERSION=$npm_package_version vite build",
     "start": "cross-env VITE_VERSION=$npm_package_version vite",
-    "start:electron": "concurrently \"cross-env BROWSER=none VITE_VERSION=$npm_package_version vite\" \"electron .\"",
+    "start:electron": "concurrently \"cross-env VITE_VERSION=$npm_package_version vite\" \"electron .\"",
     "electron-pack": "npm run build && electron-builder",
     "electron-pack-windows": "npm run build && electron-builder -w",
     "electron-pack-macos": "npm run build && electron-builder --mac --universal",
