--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "electron-updater": "^5.3.0"
   },
   "devDependencies": {
-    "@alephium/sdk": "file:../js-sdk/alephium-sdk-0.5.0.tgz",
+    "@alephium/sdk": "0.5.0",
     "@alephium/walletconnect-provider": "0.2.1",
     "@alephium/web3": "0.2.0",
     "@electron/notarize": "^1.2.3",
