--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/zxcvbn": "^4.4.1",
     "@typescript-eslint/eslint-plugin": "^5.46.1",
     "@vitejs/plugin-react": "^3.1.0",
+    "@vitest/coverage-c8": "^0.28.4",
     "@vitest/web-worker": "^0.25.8",
     "@walletconnect/sign-client": "2.1.4",
     "@walletconnect/types": "2.1.4",
