--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "electron-updater": "^5.3.0"
   },
   "devDependencies": {
-    "@alephium/sdk": "0.6.0-rc.0",
+    "@alephium/sdk": "file:../js-sdk/alephium-sdk-0.5.0.tgz",
     "@alephium/token-list": "0.0.1",
     "@alephium/walletconnect-provider": "0.2.1",
     "@alephium/web3": "0.2.0",
