Add publisher name in win config

--- a/package.json
+++ b/package.json
@@ -124,7 +124,10 @@
       ]
     },
     "win": {
-      "artifactName": "${productName}-${version}.${ext}"
+      "artifactName": "${productName}-${version}.${ext}",
+      "publisherName": [
+        "Panda Software SA"
+      ]
     },
     "mac": {
       "hardenedRuntime": true,
