--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
   "dependencies": {
     "electron-context-menu": "^3.1.2",
     "electron-is-dev": "^2.0.0",
-    "electron-updater": "^5.3.0",
-    "posthog-js": "^1.51.5"
+    "electron-updater": "^5.3.0"
   },
   "devDependencies": {
     "@alephium/sdk": "0.6.3",
@@ -42,7 +41,7 @@
     "@json-rpc-tools/utils": "^1.7.6",
     "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^13.4.0",
+    "@testing-library/react": "^14.0.0",
     "@types/events": "^3.0.0",
     "@types/lodash": "^4.14.173",
     "@types/node": "^16.9.6",
@@ -55,13 +54,13 @@
     "@types/zxcvbn": "^4.4.1",
     "@typescript-eslint/eslint-plugin": "^5.46.1",
     "@vitejs/plugin-react": "^3.1.0",
-    "@vitest/coverage-c8": "^0.28.4",
-    "@vitest/web-worker": "^0.25.8",
-    "@walletconnect/sign-client": "2.1.4",
-    "@walletconnect/types": "2.1.4",
-    "@walletconnect/utils": "2.1.4",
+    "@vitest/coverage-c8": "^0.30.1",
+    "@vitest/web-worker": "^0.30.1",
+    "@walletconnect/sign-client": "2.5.2",
+    "@walletconnect/types": "2.5.2",
+    "@walletconnect/utils": "2.5.2",
     "@yaireo/tagify": "^4.12.0",
-    "better-sqlite3": "^7.6.2",
+    "better-sqlite3": "^8.3.0",
     "bip39": "^3.0.4",
     "classnames": "^2.3.1",
     "colord": "^2.9.3",
@@ -69,7 +68,7 @@
     "concurrently": "^7.4.0",
     "cross-env": "^7.0.3",
     "dayjs": "^1.10.7",
-    "electron": "^22.0.0",
+    "electron": "^22.3.5",
     "electron-builder": "^23.0.3",
     "electron-builder-notarize": "^1.5.0",
     "electron-devtools-installer": "^3.2.0",
@@ -79,15 +78,16 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-simple-import-sort": "^8.0.0",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-unused-imports": "^2.0.0",
     "events": "^3.3.0",
-    "framer-motion": "^7.10.3",
+    "framer-motion": "^10.11.6",
     "i18next": "^22.4.9",
-    "jsdom": "^20.0.3",
+    "jsdom": "^21.1.1",
     "lodash": "^4.17.21",
-    "lucide-react": "^0.105.0-alpha.4",
+    "lucide-react": "^0.143.0",
     "nanoid": "^4.0.0",
+    "posthog-js": "^1.52.0",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
@@ -106,11 +106,11 @@
     "semver-compare": "^1.0.0",
     "styled-components": "^5.3.1",
     "type-fest": "^3.5.1",
-    "typescript": "^4.4.3",
+    "typescript": "^5.0.4",
     "vite": "^4.0.4",
     "vite-plugin-svgr": "^2.4.0",
     "vite-tsconfig-paths": "^4.0.3",
-    "vitest": "^0.25.5",
+    "vitest": "^0.30.1",
     "wait-on": "^7.0.1",
     "zxcvbn": "^4.4.2"
   },
