--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
   "dependencies": {
     "electron-context-menu": "^3.1.2",
     "electron-is-dev": "^2.0.0",
-    "electron-updater": "^5.3.0",
-    "react-apexcharts": "^1.4.0"
+    "electron-updater": "^5.3.0"
   },
   "devDependencies": {
     "@alephium/sdk": "0.6.3",
@@ -91,6 +90,7 @@
     "posthog-js": "^1.52.0",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-color": "^2.19.3",
     "react-confetti": "^6.0.1",
     "react-detect-click-outside": "^1.1.2",
