Remove after sign build command
Not needed after upgrade of electron-build to v24

--- a/package.json
+++ b/package.json
@@ -145,8 +145,7 @@
       "buildResources": "assets"
     },
     "afterPack": ".afterPack.js",
-    "afterAllArtifactBuild": ".afterAllArtifactBuild.js",
-    "afterSign": "electron-builder-notarize"
+    "afterAllArtifactBuild": ".afterAllArtifactBuild.js"
   },
   "engines": {
     "node": ">=16",
