Create script to keep translation files in sync

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "test:coverage": "vitest run --coverage",
     "lint": "eslint . --ext .ts,.tsx --max-warnings=0",
     "lint:fix": "eslint . --fix --ext .ts,.tsx",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\""
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
+    "syncTranslationFiles": "node scripts/syncTranslationFiles.js && prettier --write ./locales/**/*.json"
   },
   "browserslist": [
     ">0.2%",
