--- a/package.json
+++ b/package.json
@@ -33,10 +33,10 @@
     "electron-updater": "^5.3.0"
   },
   "devDependencies": {
-    "@alephium/sdk": "0.7.0-rc.2",
+    "@alephium/sdk": "0.7.0",
     "@alephium/token-list": "^0.0.7",
     "@alephium/walletconnect-provider": "^0.11.0",
-    "@alephium/web3": "^0.11.0",
+    "@alephium/web3": "^0.12.2",
     "@electron/notarize": "^1.2.3",
     "@json-rpc-tools/utils": "^1.7.6",
     "@reduxjs/toolkit": "^1.9.1",
