--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "nanoid": "^4.0.0",
     "posthog-js": "^1.52.0",
     "prettier": "^2.7.1",
+    "qrloop": "^1.4.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-color": "^2.19.3",
