Manage multiple WalletConnect pairings
Closes #796

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   "devDependencies": {
     "@alephium/sdk": "0.7.5",
     "@alephium/token-list": "^0.0.11",
-    "@alephium/walletconnect-provider": "^0.13.0",
+    "@alephium/walletconnect-provider": "^0.22.0",
     "@alephium/web3": "^0.16.1",
     "@electron/notarize": "^1.2.3",
     "@json-rpc-tools/utils": "^1.7.6",
@@ -56,9 +56,10 @@
     "@vitejs/plugin-react": "^3.1.0",
     "@vitest/coverage-c8": "^0.30.1",
     "@vitest/web-worker": "^0.30.1",
-    "@walletconnect/sign-client": "2.5.2",
-    "@walletconnect/types": "2.5.2",
-    "@walletconnect/utils": "2.5.2",
+    "@walletconnect/react-native-compat": "^2.10.2",
+    "@walletconnect/sign-client": "^2.10.2",
+    "@walletconnect/types": "^2.10.2",
+    "@walletconnect/utils": "^2.10.2",
     "@yaireo/tagify": "^4.12.0",
     "better-sqlite3": "^8.3.0",
     "bip39": "^3.0.4",
@@ -86,7 +87,7 @@
     "i18next": "^22.4.9",
     "jsdom": "^21.1.1",
     "lodash": "^4.17.21",
-    "lucide-react": "^0.143.0",
+    "lucide-react": "^0.287.0",
     "nanoid": "^4.0.0",
     "posthog-js": "^1.52.0",
     "prettier": "^2.7.1",
