--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
   "dependencies": {
     "electron-context-menu": "^3.1.2",
     "electron-is-dev": "^2.0.0",
-    "electron-updater": "^5.3.0"
+    "electron-updater": "^5.3.0",
+    "html5-qrcode": "^2.3.8"
   },
   "devDependencies": {
     "@alephium/sdk": "0.7.5",
