--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
   "dependencies": {
     "electron-context-menu": "^3.1.2",
     "electron-is-dev": "^2.0.0",
-    "electron-updater": "^5.3.0",
-    "html5-qrcode": "^2.3.8"
+    "electron-updater": "^5.3.0"
   },
   "devDependencies": {
     "@alephium/sdk": "0.7.5",
@@ -91,6 +90,7 @@
     "nanoid": "^4.0.0",
     "posthog-js": "^1.52.0",
     "prettier": "^2.7.1",
+    "qr-scanner": "^1.4.2",
     "qrloop": "^1.4.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
